<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/pref_sdk_settings">
        <EditTextPreference
            android:defaultValue=""
            android:key="pref_app_id"
            android:summary="@string/pref_enter_app_id"
            android:title="@string/pref_app_id"></EditTextPreference>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_is_production"
            android:summary="@string/pref_connect_to_production"
            android:title="@string/pref_production" />
        <!--<Preference-->
            <!--android:dependency="pref_key_is_production"-->
            <!--android:key="pref_some_dependant_pref"-->
            <!--android:summary="hello summary"-->
            <!--android:title="hello" />-->

    </PreferenceCategory>
</PreferenceScreen>